# RayTracer

./: .gitmodules  CMakeLists.txt  hr_out.ppm  out.ppm  shr_out.ppm  sundarta.ppm
results/: 100spp.ppm  checker.ppm  normals.ppm  spp100.ppm  spp2000.ppm
results/with_pdf/: checker.ppm  material.ppm  material_top.ppm  normals.ppm  spp_10.ppm  spp_1000.ppm  spp_1000_mat.ppm  spp_1000_nc.ppm  spp_10_mat.ppm  spp_10_nc.ppm  spp_200.ppm  spp_200_mat.ppm  spp_200_nc.ppm  spp_50.ppm  spp_50_mat.ppm  spp_50_nc.ppm
results/without_pdf/: spp_100.ppm  spp_1000.ppm  spp_1000_lambertian.ppm  spp_300.ppm  without_pdf.ppm
src/: box.cpp  box.h  camera.cpp  camera.h  hittable.cpp  hittable.h  lights.cpp  lights.h  main.cpp  material.h  material_types.cpp  material_types.h  metal.cpp  metal.h  pdf.h  pyramid.cpp  pyramid.h  ray.h  rect.cpp  rect.h  sphere.cpp  sphere.h  texture.h  utils.cpp  utils.h
src/common/: aabb.h  base_hittable.cpp  base_hittable.h  base_material.h  ray.h  texture.h
src/hittables/: box.h  hittable.cpp  hittable.h  pyramid.h  rect.h  sphere.h  triangle.h
src/materials/: material.h  material_types.cpp  material_types.h
src/utils/: bvh.cpp  bvh.h  pdf.h  utils.h
